Fixed the alignments of title, description, and public

--- a/src/main/webapp/public/stylesheets/edit-lesson.css
+++ b/src/main/webapp/public/stylesheets/edit-lesson.css
@@ -36,3 +36,7 @@ nav, .nav {
 .task-button {
     margin-left: 10px;
 }
+
+.form-check {
+    margin: 0;
+}
